--- a/Business_Solutions/templates/inventory/inventoryDelete.html
+++ b/Business_Solutions/templates/inventory/inventoryDelete.html
@@ -11,7 +11,7 @@
 
 <!-- main body -->
 {%block main%}
-<div class="inventory p-2">
+<div class="inventory">
 
     <div class="card height-100 d-flex justify-content-center align-items-center p-5">
         
