--- a/Business_Solutions/templates/reports/report.html
+++ b/Business_Solutions/templates/reports/report.html
@@ -6,13 +6,13 @@
 
 
 {%block link%}
-    <!-- <link rel="stylesheet" href="{%static 'css/suppliers.css'%}"> -->
+    <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
 {%endblock link%}
 
 <!-- main body -->
 {%block main%}
 
-<div class="card">
+<div class="card height-100">
     Report Section
 </div>
 
