--- a/Business_Solutions/static/css/layout.css
+++ b/Business_Solutions/static/css/layout.css
@@ -110,7 +110,10 @@ a{
 
 input, select,textarea{
     width: 100%;
-    padding: 5px;
+    padding: .6rem;
+    border: none;
+    border-radius: 8px;
+    background-color: rgba(218, 218, 218, 0.878);
 }
 
 
