--- a/Business_Solutions/templates/inventory/sales/salesPayment.html
+++ b/Business_Solutions/templates/inventory/sales/salesPayment.html
@@ -10,21 +10,84 @@
 <!-- main body -->
 {%block main%}
 <div class="inventory">
-    <div class="card height-100 d-flex justify-content-center align-items-center">
-        <div class="card shadow-lg border-success width-50">
-            <div class="card-header">Payment</div>
-            <div class="card-body">
-                <form method="post">
-                    {%csrf_token%}
-                    {{form.as_p}}
-                    <div>
-                        <a href="{%url 'invoice-list' email%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
-                        <button class="btn btn-sm btn-success">Confirm Sale</button>
+    <div class="card height-100 p-3">
+        <div class="row">
+            <div class="col">
+                <table class="table table-bordered border-secondary">
+                    <tbody>
+                        <tr>
+                            <td>Customer Name</td>
+                            <td class="text-end fw-bold">{{customer.first_name}} {{customer.last_name}}</td>
+                        </tr>
+                        <tr>
+                            <td>Email</td>
+                            <td class="text-end">{{customer.email}}</td>
+                        </tr>
+                        <tr>
+                            <td>Phone</td>
+                            <td class="text-end">{{customer.phone}}</td>
+                        </tr>
+                        <tr>
+                            <td>Total Quantity</td>
+                            <td class="text-end">{{total_quantity}}</td>
+                        </tr>
+                        <tr>
+                            <td class="fw-bold">Total Amount</td>
+                            <td class="text-end fw-bold text-success">{{total_amount}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="mt-5 card border-success">
+                    <div class="card-header">Payment</div>
+                    <div class="card-body">
+                        <form method="post">
+                            {%csrf_token%}
+                            {{form.as_p}}
+                            <div>
+                                <a href="{%url 'invoice-list' email%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
+                                <button class="btn btn-sm btn-success">Confirm Sale</button>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
+            </div>
+            <div class="col">
+                <table class="table border">
+                    <thead class="sticky-top table-secondary">
+                        <tr>
+                            <th scope="col">Product</th>
+                            <th scope="col" class="text-center">Picture</th>
+                            <th scope="col" class="text-center">price</th>
+                            <th scope="col" class="text-center">Quantity</th>
+                            <th scope="col" class="text-center">Subtotal</th>
+                        </tr>
+                    </thead>
+                    <tbody class="">
+                        {%for product in product_list%}
+                            <tr>
+                                <td class="align-middle">{{product}}</td>
+                                <td>
+                                    <div class="overflow-hidden d-flex justify-content-center align-items-center">
+                                        {%if product.product.product.productImg %}
+                                        <img src="{{ product.product.product.productImg.url }}" alt="Product Image" width="60">
+                                        {%else%}
+                                        <img src="{% static 'media/default_images/default_product_image.png' %}" alt="{{ product.model }}">
+                                        {%endif%}
+                                    </div>
+                                </td>
+                                <td class="text-center align-middle">{{product.product.unit_price}}</td>
+                                <td class="text-center align-middle">{{product.quantity}}</td>
+                                <td class="text-center align-middle text-success">{{product.subtotal}}</td>
+                            </tr>
+                        {%endfor%}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
 
 {%endblock main%}
+
+
+        
