--- a/Business_Solutions/templates/inventory/sales/invoiceList.html
+++ b/Business_Solutions/templates/inventory/sales/invoiceList.html
@@ -18,11 +18,29 @@
             <div class="fs-4 fw-bold">Invoice</div>
             <a href="{%url 'sales-payment' buyer.email%}" class="ms-2 btn btn-sm btn-success">Make Payment</a>
         </div>
-        <div class="m-3 mb-4 card border border-2 border-info">
-            <div class="card-body">
-                <div class="mb-2 fs-4"><span class="fw-normal">{{buyer.first_name}} {{buyer.last_name}}</span></div>
-                <div class="mb-2 fw-bold">Email: <span class="fw-normal">{{buyer.email}}</span></div>
-                <div class="fw-bold">Phone: <span class="fw-normal">{{buyer.phone}}</span></div>
+        <div class="m-3 mb-4 card border">
+            <div class="card-body d-flex justify-content-between align-items-center">
+                <div>
+                    <div class="mb-2 fs-4"><span class="fw-normal">{{buyer.first_name}} {{buyer.last_name}}</span></div>
+                    <div class="mb-2 ">Email: <u class="fw-normal">{{buyer.email}}</u></div>
+                    <div class="">Phone: <span class="fw-normal">{{buyer.phone}}</span></div>
+                </div>
+                <div>
+                    <table class="m-0 table">
+                        <tbody>
+                            <tr>
+                                <td>Total Quantity</td>
+                                <td class="text-end fw-bold">{{total_quantity}}</td>
+                            </tr>
+                            <tr>
+                                <td>Total Amount</td>
+                                <td class="text-end fw-bold text-success">{{total_amount}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
+                
             </div>
         </div>
         <div class="card-body p-0 ps-3 pe-3 table-container">
@@ -59,7 +77,7 @@
                         </tr>
                     {%endfor%}
                 </tbody>
-                <tfoot class="sticky-bottom table-success">
+                <tfoot class="sticky-bottom table-secondary">
                     <tr>
                         <td colspan="4" class="fw-bold">Total Amount</td>
                         <td class="text-center text-success fw-bold">
