--- a/Business_Solutions/templates/authentication/password_reset_confirm.html
+++ b/Business_Solutions/templates/authentication/password_reset_confirm.html
@@ -1,72 +1,20 @@
-{%load static%}
+{% extends "authentication/Layout.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{%block title%}Password Reset Confirm | Amar Shop{%endblock title%}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Password Reset Confirm | Amar Shop</title>
-    
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {%block link%}{%endblock link%}
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-    <link rel="stylesheet" href="{% static 'css/login.css'%}">
-</head>
+{%block heading%}Set new password{%endblock heading%}
 
-<body>
-
-    <div class="height-full row">
-        <div class="col-5 p-0 m-0 d-flex justify-content-between align-items-center position-relative">
-            <div class="position-absolute top-0 mt-5 branding fs-2 fw-bold"><span class="gedget">Amar</span> Shop</div>
-            <div class="w-full m-5">
-                <div class="text-center">
-                    <div class="mt-5 fs-6 fw-semibold text-primary">Reset Password</div>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {{form.as_p}}
-                        <div class="mt-3 d-flex flex-column">
-                            <button class="btn btn-success" type="submit">Save Password</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="position-absolute bottom-0 text-center w-full mb-2 fw-lighter">Copyright &copy; 2024 Amar Shop. All Rights Reserved.</div>
-        </div>
-
-        <div class="col bg-img d-flex justify-content-center align-items-center">
-            <div class="z-index d-flex flex-column justify-content-center align-items-center">
-                <div class="fw-bold fs-2 text-white">Welcome to <span class="branding fs-2"><span class="gedget">Amar</span> Shop</span></div>
-                <div class="mt-2 text-center fs-5 fw-medium">Admin Panel</div>
-                <div class="mt-2 text-center fs-6 fw-lighter">Please set your new password.</div>
-                <button type="button" class="btn btn-outline-warning mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">Watch Demo</button>
-            </div>
-        </div>
-
+{%block form%}
+<form method="post">
+    {% csrf_token %}
+    {{form.as_p}}
+    <div class="mt-3 d-flex flex-column">
+        <button class="btn btn-success" type="submit">Save Password</button>
     </div>
-
-    <!-- Video Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Applicaton Demo</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body p-0 m-0">
-                <iframe class="w-full" height="550" src="https://www.youtube.com/embed/i9nFG0pAsr4" title="Deque" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-
-</body>
-</html>
+</form>
+{%endblock form%}
 
 
-
+{%block text%} Please set your new password. {%endblock text%}
 
