--- a/Business_Solutions/templates/authentication/password_reset_done.html
+++ b/Business_Solutions/templates/authentication/password_reset_done.html
@@ -1,68 +1,18 @@
-{%load static%}
+{% extends "authentication/Layout.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{%block title%}Password Request Email Send | Amar Shop{%endblock title%}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Password Request Email Send | Amar Shop</title>
-    
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {%block link%}{%endblock link%}
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-    <link rel="stylesheet" href="{% static 'css/login.css'%}">
-</head>
 
-<body>
-
-    <div class="height-full row">
-        <div class="col-5 p-0 m-0 d-flex justify-content-between align-items-center position-relative">
-            <div class="position-absolute top-0 mt-5 branding fs-2 fw-bold"><span class="gedget">Amar</span> Shop</div>
-            <div class="w-full m-5">
-                <div class="card-body">
-                    <div class="alert alert-success" role="alert">
-                        <div class="alert-heading fw-bold fs-4 mb-2 d-flex align-items-center" role="alert">
-                            Password Reset Request
-                        </div>
-                        An email has been sent with instructions to reset your password.
-                        Please check your provided email address.
-                    </div>
-                </div>
-            </div>
-            <div class="position-absolute bottom-0 text-center w-full mb-2 fw-lighter">Copyright &copy; 2024 Amar Shop. All Rights Reserved.</div>
-        </div>
-
-        <div class="col bg-img d-flex justify-content-center align-items-center">
-            <div class="z-index d-flex flex-column justify-content-center align-items-center">
-                <div class="fw-bold fs-2 text-white">Welcome to <span class="branding fs-2"><span class="gedget">Amar</span> Shop</span></div>
-                <div class="mt-2 text-center fs-5 fw-medium">Admin Panel</div>
-                <button type="button" class="btn btn-outline-warning mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">Watch Demo</button>
-            </div>
-        </div>
-
+{%block form%}
+<div class="alert alert-success" role="alert">
+    <div class="alert-heading fw-bold fs-4 mb-2 d-flex align-items-center" role="alert">
+        Password Reset Request
     </div>
-
-    <!-- Video Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Applicaton Demo</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body p-0 m-0">
-                <iframe class="w-full" height="550" src="https://www.youtube.com/embed/i9nFG0pAsr4" title="Deque" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-
-</body>
-</html>
-
+    An email has been sent with instructions to reset your password.
+    Please check your provided email address.
+</div>
+{%endblock form%}
 
 
 
