--- a/Business_Solutions/templates/authentication/singup.html
+++ b/Business_Solutions/templates/authentication/singup.html
@@ -1,115 +1,57 @@
-{%load static%}
+{% extends "authentication/Layout.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{%block title%}Admin Signup | Amar Shop{%endblock title%}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Signup | Amar Shop</title>
-    
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {%block link%}{%endblock link%}
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-    <link rel="stylesheet" href="{% static 'css/login.css'%}">
-</head>
+{%block heading%}Admin Signup{%endblock heading%}
 
-<body>
-
-    <div class="height-full row">
-        <div class="col-5 p-0 m-0 d-flex justify-content-between align-items-center position-relative">
-            <div class="position-absolute top-0 mt-3 branding fs-2 fw-bold"><span class="gedget">Amar</span> Shop</div>
-            <div class="w-full m-5">
-                <div class="text-center">
-                    <div class="mt-5 fs-6 fw-semibold text-success">Admin Signup</div>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        <!-- {{ form.as_p }} -->
-                        <div class="">
-                            <label for="{{ form.first_name_for_label }}" class="form-label">First Name:</label>
-                            {{form.first_name}}
-                            <div class="mt-1 text-danger">
-                                {{ form.first_name.errors }}
-                            </div>
-                        </div>
-                        <div class="mt-3">
-                            <label for="{{ form.last_name_for_label }}" class="form-label">Last Name:</label>
-                            {{form.last_name}}
-                            <div class="mt-1 text-danger">
-                                {{ form.last_name.errors }}
-                            </div>
-                        </div>
-                        <div class="mt-3">
-                            <label for="{{ form.email_for_label }}" class="form-label">Email:</label>
-                            {{form.email}}
-                            <div class="mt-1 text-danger">
-                                {{ form.email.errors }}
-                            </div>
-                        </div>
-                        <div class="mt-3">
-                            <label for="{{ form.password_for_label }}" class="form-label">Password:</label>
-                            {{form.password1}}
-                            <div class="mt-1 text-danger">
-                                {{ form.password1.errors }}
-                            </div>
-                        </div>
-                        <div class="mt-3">
-                            <label for="{{ form.confirm_password_for_label }}" class="form-label">Confirm Password:</label>
-                            {{form.password2}}
-                            <div class="mt-1 text-danger">
-                                {{ form.password2.errors }}
-                            </div>
-                        </div>
-                        <div class="mt-4 d-flex flex-column">
-                            <button class="btn btn-success" type="submit">Registration as admin</button>
-                            <a href="{%url 'admin-login'%}" class="mt-3 text-center text-primary">Admin Login</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="position-absolute bottom-0 text-center w-full mb-2 fw-lighter">Copyright &copy; 2024 Amar Shop. All Rights Reserved.</div>
+{%block form%}
+<form method="post">
+    {% csrf_token %}
+    <!-- {{ form.as_p }} -->
+    <div class="">
+        <label for="{{ form.first_name_for_label }}" class="form-label">First Name:</label>
+        {{form.first_name}}
+        <div class="mt-1 text-danger">
+            {{ form.first_name.errors }}
         </div>
-
-        <div class="col bg-img d-flex justify-content-center align-items-center">
-            <div class="z-index d-flex flex-column justify-content-center align-items-center">
-                <div class="fw-bold fs-2 text-white">Welcome to <span class="branding fs-2"><span class="gedget">Amar</span> Shop</span></div>
-                <div class="mt-2 text-center fs-5 fw-medium">Admin Panel</div>
-                <div class="mt-2 text-center fs-6 fw-lighter">Registration as admin to manage your online store</div>
-                <button class="btn btn-outline-warning mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">Watch Demo</button>
-            </div>
-        </div>
-
     </div>
-
-    <!-- Video Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Applicaton Demo</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body p-0 m-0">
-                <iframe class="w-full" height="550" src="https://www.youtube.com/embed/i9nFG0pAsr4" title="Deque" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-          </div>
+    <div class="mt-3">
+        <label for="{{ form.last_name_for_label }}" class="form-label">Last Name:</label>
+        {{form.last_name}}
+        <div class="mt-1 text-danger">
+            {{ form.last_name.errors }}
         </div>
-      </div>
+    </div>
+    <div class="mt-3">
+        <label for="{{ form.email_for_label }}" class="form-label">Email:</label>
+        {{form.email}}
+        <div class="mt-1 text-danger">
+            {{ form.email.errors }}
+        </div>
+    </div>
+    <div class="mt-3">
+        <label for="{{ form.password_for_label }}" class="form-label">Password:</label>
+        {{form.password1}}
+        <div class="mt-1 text-danger">
+            {{ form.password1.errors }}
+        </div>
+    </div>
+    <div class="mt-3">
+        <label for="{{ form.confirm_password_for_label }}" class="form-label">Confirm Password:</label>
+        {{form.password2}}
+        <div class="mt-1 text-danger">
+            {{ form.password2.errors }}
+        </div>
+    </div>
+    <div class="mt-4 d-flex flex-column">
+        <button class="btn btn-success" type="submit">Registration as admin</button>
+        <a href="{%url 'admin-login'%}" class="mt-3 text-center text-primary">Admin Login</a>
+    </div>
+</form>
+{%endblock form%}
 
-</body>
-</html>
+
+{%block text%} Registration as admin to manage your online store {%endblock text%}
 
 
-
-
-
-    <!-- <h2>Create Superuser</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create Superuser</button>
-    </form> -->
