--- a/Business_Solutions/templates/inventory/inventoryList.html
+++ b/Business_Solutions/templates/inventory/inventoryList.html
@@ -77,7 +77,7 @@
                             {%if inventory.quantity < 5 and inventory.quantity > 0 %}
                                 <button class="alert alert-warning p-0 ps-1 pe-1 m-0 width-auto">Low</button>
                             {%elif inventory.quantity == 0%}
-                                <button class="alert alert-danger p-0 ps-1 pe-1 m-0 width-auto">Stock out</button>
+                                <button class="alert alert-danger p-0 m-0 width-auto">Stock out</button>
                             {%else%}
                                 <button class="alert alert-success p-0 ps-1 pe-1 m-0 width-auto">Available</button>
                             {%endif%} 
